# config/packages/nelmio_api_doc.yaml
@@ -486,6 +486,14 @@ nelmio_api_doc:
                         required: true
                         description: Multiselect attribute id
                         example: d1b9b64a-fef6-440c-9560-cf73daa4b4d6
+            product_category:
+                type: object
+                properties:
+                    category:
+                        type: string
+                        required: true
+                        description: Category Id
+                        example: d1b9b64a-fef6-440c-9560-cf73daa4b4d6
             template:
                 type: object
                 properties:
